Добавил и обработал картинки наград для пациентов.

--- a/src/main/resources/templates/patients/achievements.html
+++ b/src/main/resources/templates/patients/achievements.html
@@ -27,97 +27,178 @@
                     <div class="border rounded">
                         <h4 class="fs-4 mb-1">Награда 1</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/1.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 2</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/2.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 3</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/3.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 4</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/4.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 5</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/5.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 6</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/6.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 7</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/7.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 8</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/8.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 9</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/9.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 10</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/10.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
                 </div>
                 <div class="col mx-auto">
                     <div class="border rounded">
-                        <h4 class="fs-4 mb-1">Награда 1</h4>
+                        <h4 class="fs-4 mb-1">Награда 11</h4>
                         <div class="mb-1">
-                            <img src="../../static/img/main.png" width="72" alt="" />
+                            <img src="../../static/img/achievements/11.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 12</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/12.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 13</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/13.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 14</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/14.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 15</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/15.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 16</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/16.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 17</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/17.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 18</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/18.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 19</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/19.png" width="72" alt="" />
+                        </div>
+                        <p class="mb-0">Выдаётся за какие-то заслуги</p>
+                    </div>
+                </div>
+                <div class="col mx-auto">
+                    <div class="border rounded">
+                        <h4 class="fs-4 mb-1">Награда 20</h4>
+                        <div class="mb-1">
+                            <img src="../../static/img/achievements/20.png" width="72" alt="" />
                         </div>
                         <p class="mb-0">Выдаётся за какие-то заслуги</p>
                     </div>
