--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="border rounded fs-5 p-3" id="hospital-registration-form">
+                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="border rounded bg-form fs-5 p-3" id="hospital-registration-form">
                         <h2 class="fs-4">Заявка</h2>
                         <hr class="mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
