--- a/src/main/resources/templates/hospitals/hospital-registration-request.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-request.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration/requests/add}" class="border rounded fs-5 p-3">
+                    <form action="#" th:action="@{/rest/hospital-registration/requests/add}" class="border rounded bg-form fs-5 p-3">
                         <div class="d-flex align-items-center justify-content-between mb-0">
                             <h2 class="fs-4 mb-0">Заявка</h2>
                             <div class="fs-4" th:text="${request.formattedDate}">19.09.2021 в 15:12:14</div>
