--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,7 +36,7 @@
             <!---->
             <div class="row">
                 <div class="col-12 col-md-9 col-lg-6 mx-auto">
-                    <form action="#" th:action="@{/login/processing}" method="post" class="border rounded fs-5 p-3">
+                    <form action="#" th:action="@{/login/processing}" method="post" class="border rounded bg-form fs-5 p-3">
                         <h2 class="fs-4">Вход</h2>
                         <hr />
                         <div class="mb-3">
