--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/registration}" method="post" class="border rounded fs-5 p-3" id="user-registration-form">
+                    <form action="#" th:action="@{/rest/registration}" method="post" class="border rounded bg-form fs-5 p-3" id="user-registration-form">
                         <h2 class="fs-4">Регистрация</h2>
                         <hr />
                         <div class="mb-3">
