Сверстал вид карточки показателя для врача и пациента, добавил ещё пару svg.

--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -22,34 +22,68 @@
                     <div class="card bg-indicator text-secondary">
                         <img src="../../static/img/indicators/Спирометрия.jpg" class="card-img-top rounded px-2 pt-2" alt="..." />
                         <div class="card-body text-start">
-                            <h5 class="card-title text-center">Спирометрия</h5>
-                            <p class="mb-1">
+                            <h5 class="card-title text-center mb-3">Спирометрия</h5>
+                            <p class="mb-3">
                                 <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
-                                    <img class="mb-0" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="16" alt="Редактировать" />
+                                    <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="18" alt="Редактировать" />
                                 </a>
                                 Текущее расписание: <span class="text-lowercase">Три раза в неделю</span>
                             </p>
-                            <p class="mb-1">Дата последней отправки: <span class="text-lowercase">14:42:59 18.10.2021</span></p>
+                            <p class="mb-3">
+                                <img class="mb-1" src="../../static/svg/date.svg" width="18" alt="Дата" />
+                                Дата последней отправки: <span class="text-lowercase">14:42:59 18.10.2021</span>
+                            </p>
+                            <p class="mb-3">
+                                <img class="mb-1" src="../../static/svg/table.svg" width="18" alt="Дата" />
+                                <a href="#" class="text-secondary">Посмотреть в виде таблицы</a>
+                            </p>
+                            <p class="mb-0">
+                                <img class="mb-1" src="../../static/svg/graphic.svg" width="18" alt="Дата" class="mb-1" />
+                                <a href="#" class="text-secondary">Посмотреть в виде графиков</a>
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col mx-auto">
-                    <div class="card bg-indicator p-2">
-                        <img src="../../static/img/indicators/Т6МХ.jpg" class="card-img-top rounded" alt="..." />
-                        <div class="card-body">
-                            <h5 class="card-title">Т6МХ</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card bg-indicator text-secondary">
+                        <img src="../../static/img/indicators/Т6МХ.jpg" class="card-img-top rounded px-2 pt-2" alt="..." />
+                        <div class="card-body text-start">
+                            <h5 class="card-title text-center mb-3">Т6МХ</h5>
+                            <p class="mb-3">
+                                <img class="mb-1" src="../../static/svg/schedule.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="18" alt="Редактировать" />
+                                Текущее расписание: <span class="text-lowercase">Три раза в неделю</span>
+                            </p>
+                            <p class="mb-3">
+                                <img class="mb-1" src="../../static/svg/date.svg" width="18" alt="Дата" />
+                                Дата последней отправки: <span class="text-lowercase">14:42:59 18.10.2021</span>
+                            </p>
+                            <a href="#" class="btn btn-sm btn-primary mb-0">Перейти к отправке</a>
                         </div>
                     </div>
                 </div>
                 <div class="col mx-auto">
-                    <div class="card bg-indicator p-2">
-                        <img src="../../static/img/indicators/Давление.jpg" class="card-img-top rounded" alt="..." />
-                        <div class="card-body">
-                            <h5 class="card-title">Давление</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="card bg-indicator text-secondary">
+                        <img src="../../static/img/indicators/Давление.jpg" class="card-img-top rounded px-2 pt-2" alt="..." />
+                        <div class="card-body text-start">
+                            <h5 class="card-title text-center">Давление</h5>
+                            <p class="mb-2">
+                                <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
+                                    <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="18" alt="Редактировать" />
+                                </a>
+                                Текущее расписание: <span class="text-lowercase">Три раза в неделю</span>
+                            </p>
+                            <p class="mb-2">
+                                <img class="mb-1" src="../../static/svg/date.svg" width="18" alt="Дата" />
+                                Дата последней отправки: <span class="text-lowercase">14:42:59 18.10.2021</span>
+                            </p>
+                            <p class="mb-2">
+                                <img class="mb-1" src="../../static/svg/table.svg" width="18" alt="Дата" />
+                                <a href="#" class="text-secondary">Посмотреть в виде таблицы</a>
+                            </p>
+                            <p class="mb-0">
+                                <img class="mb-1" src="../../static/svg/graphic.svg" width="18" alt="Дата" class="mb-1" />
+                                <a href="#" class="text-secondary">Посмотреть в виде графиков</a>
+                            </p>
                         </div>
                     </div>
                 </div>
