Добавил все необходимые атрибуты для карточки показателя для будущего заполнения посредством цикла с сервера.

--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -18,33 +18,37 @@
         <!---->
         <div class="container text-secondary my-5">
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3 mb-4">
-                <div class="col mx-auto">
+                <div class="col mx-auto" th:each="each : ${indicators}">
                     <div class="card bg-indicator text-secondary">
-                        <img src="../../static/img/indicators/Спирометрия.jpg" class="card-img-top rounded px-2 pt-2" alt="..." />
+                        <img src="../../static/img/indicators/Давление.jpg" th:src="@{'/img/indicators/' + ${each.filename}}" class="card-img-top rounded px-2 pt-2" alt="Давление" />
                         <div class="card-body text-start">
-                            <h5 class="card-title text-center mb-3">Спирометрия</h5>
+                            <h5 class="card-title text-center mb-3" th:text="${each.name}">Давление</h5>
                             <p class="mb-3">
-                                <a href="#" th:if="${isNonLoginInfoEditingEnabled}" class="text-decoration-none">
-                                    <img class="mb-1" src="../../static/svg/edit-svgrepo-com.svg" th:src="@{/svg/edit-svgrepo-com.svg}" width="18" alt="Редактировать" />
+                                <a th:id="'edit-schedule-for-' + ${each.workingName}" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
+                                    <img width="18" class="mb-1" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                                 </a>
+                                <img th:if="${isCurrentUserPatient}" src="../../static/svg/schedule.svg" th:src="@{/svg/schedule.svg}" alt="Расписание" />
                                 Текущее расписание: <span class="text-lowercase">Три раза в неделю</span>
                             </p>
                             <p class="mb-3">
-                                <img class="mb-1" src="../../static/svg/date.svg" width="18" alt="Дата" />
-                                Дата последней отправки: <span class="text-lowercase">14:42:59 18.10.2021</span>
+                                <img width="18" class="mb-1" src="../../static/svg/date.svg" th:src="@{/svg/date.svg}" alt="Дата" />
+                                Дата последней отправки: <span th:text="${each.date}" class="text-lowercase">14:42:59 18.10.2021</span>
                             </p>
-                            <p class="mb-3">
-                                <img class="mb-1" src="../../static/svg/table.svg" width="18" alt="Дата" />
+                            <p class="mb-3" th:if="${isCurrentUserOwnDoctor}">
+                                <img width="18" class="mb-1" src="../../static/svg/table.svg" th:src="@{/svg/table.svg}" alt="Таблица" />
                                 <a href="#" class="text-secondary">Посмотреть в виде таблицы</a>
                             </p>
-                            <p class="mb-0">
-                                <img class="mb-1" src="../../static/svg/graphic.svg" width="18" alt="Дата" class="mb-1" />
+                            <p class="mb-0" th:if="${isCurrentUserOwnDoctor}">
+                                <img width="18" class="mb-1" src="../../static/svg/graphic.svg" th:src="@{/svg/graphic.svg}" alt="График" />
                                 <a href="#" class="text-secondary">Посмотреть в виде графиков</a>
+                            </p>
+                            <p class="mb-0" th:if="${isCurrentUserPatient}">
+                                <a href="#" class="btn btn-sm btn-primary">Перейти к отправке</a>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="col mx-auto">
+                <!--<div class="col mx-auto">
                     <div class="card bg-indicator text-secondary">
                         <img src="../../static/img/indicators/Т6МХ.jpg" class="card-img-top rounded px-2 pt-2" alt="..." />
                         <div class="card-body text-start">
@@ -86,7 +90,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
         <!---->
