Добавил картинки для всех карточек показателей. Временно убрал вывод даты на странице карточек.

--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -32,7 +32,7 @@
                             </p>
                             <p class="mb-3">
                                 <img width="18" class="mb-1" src="../../static/svg/date.svg" th:src="@{/svg/date.svg}" alt="Дата" />
-                                Дата последней отправки: <span th:text="${each.date}" class="text-lowercase">14:42:59 18.10.2021</span>
+                                Дата последней отправки:
                             </p>
                             <p class="mb-3" th:if="${isCurrentUserOwnDoctor}">
                                 <img width="18" class="mb-1" src="../../static/svg/table.svg" th:src="@{/svg/table.svg}" alt="Таблица" />
