--- a/src/main/resources/templates/fragments/headers/patient-header.html
+++ b/src/main/resources/templates/fragments/headers/patient-header.html
@@ -6,7 +6,7 @@
         <title>Заголовок для пациента</title>
     </head>
     <body>
-        <header class="container-fluid bg-dark" th:fragment="admin-header">
+        <header class="container-fluid bg-dark" th:fragment="patient-header">
             <div class="container p-2">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-xl-between">
                     <div class="d-flex flex-row flex-wrap align-items-center justify-content-center">
