--- a/src/main/resources/templates/patients/indicators.html
+++ b/src/main/resources/templates/patients/indicators.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title th:text="${title}">Показатели</title>
+        <title>Показатели</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -17,9 +17,11 @@
         <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
         <!---->
         <div class="container text-secondary my-5">
+            <!---->
             <div class="row mb-3">
                 <h2 class="text-secondary text-center fs-2">Результаты наблюдений</h2>
             </div>
+            <!---->
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3 mb-5">
                 <div class="col mx-auto" th:each="each : ${inputIndicatorCards}">
                     <div class="card bg-indicator text-secondary">
@@ -52,10 +54,12 @@
                     </div>
                 </div>
             </div>
+            <!---->
             <div class="row mb-3">
                 <h2 class="text-secondary text-center fs-2">Результаты анализов</h2>
             </div>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3 mb-3">
+            <!---->
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 text-center g-3">
                 <div class="col mx-auto" th:each="each : ${fileIndicatorCards}">
                     <div class="card bg-indicator text-secondary">
                         <img src="../../static/img/indicators/Давление.jpg" th:src="@{'/img/indicators/' + ${each.filename}}" class="card-img-top rounded px-2 pt-2" alt="Давление" />
@@ -65,7 +69,7 @@
                                 <a th:id="'edit-schedule-for-' + ${each.workingName}" th:if="${isCurrentUserOwnDoctor}" href="#" class="text-decoration-none">
                                     <img width="18" class="mb-1" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                                 </a>
-                                <img width="18" th:if="${isCurrentUserPatient}" src="../../static/svg/schedule.svg" th:src="@{/svg/schedule.svg}" alt="Расписание" />
+                                <img width="18" class="mb-1" th:if="${isCurrentUserPatient}" src="../../static/svg/schedule.svg" th:src="@{/svg/schedule.svg}" alt="Расписание" />
                                 Текущее расписание: <span class="text-lowercase" th:text="${each.schedule != null} ? ${each.schedule} : 'Отсутствует'">Три раза в неделю</span>
                             </p>
                             <p class="mb-3">
@@ -73,7 +77,7 @@
                                 Дата последней отправки: <span class="text-lowercase" th:text="${each.date != null} ? ${each.formattedDate} : 'Ни разу не отправлял'">14:48:56 20-11-2019</span>
                             </p>
                             <p class="mb-3" th:if="${isCurrentUserOwnDoctor}">
-                                <img width="18" class="mb-1" src="../../static/svg/table.svg" th:src="@{/svg/table.svg}" alt="Таблица" />
+                                <img width="18" class="mb-1" src="../../static/svg/files.svg" th:src="@{/svg/files.svg}" alt="Файлы" />
                                 <a href="#" class="text-secondary">Посмотреть в виде файлов</a>
                             </p>
                             <p class="mb-0" th:if="${isCurrentUserPatient}">
@@ -83,6 +87,7 @@
                     </div>
                 </div>
             </div>
+            <!---->
         </div>
         <!---->
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
